added image and more js stuff. made the losing screen and docking seconds for wrong answer

--- a/index.html
+++ b/index.html
@@ -81,9 +81,13 @@
 
 
 
+    <div class="loser hidden">
+        <p>
+            YOU LOST LOLOLOLOLOL
+        </p>
+    </div>
 
-
-
+    <img src="./Micheal.jpg" class="hidden mike">
 
 
 
