adding more js and adding highscore tracker

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <p class="time">
 
         </p>
+        <p class="score">
+
+        </p>
     </header>
     <div class="container">
         <h1>
@@ -64,21 +67,21 @@
     <div class="questionThree question hidden">
         <h2>What is 1+1</h2>
         <div class="choiceButton">
-            <button type="button" class="wrongAnswer answer">1</button>
+            <button type="button" class="wrongAnswer last answer">1</button>
         </div>
         <div class="choiceButton">
-            <button type="button" class="rightAnswer answer">2</button>
+            <button type="button" class="rightAnswer last answer">2</button>
         </div>
         <div class="choiceButton">
-            <button type="button" class="wrongAnswer answer">3</button>
+            <button type="button" class="wrongAnswer last answer">3</button>
         </div>
         <div class="choiceButton">
-            <button type="button" class="wrongAnswer answer">4</button>
+            <button type="button" class="wrongAnswer last answer">4</button>
         </div>
     </div>
 
     
-
+    
 
 
     <div class="loser hidden">
@@ -86,6 +89,12 @@
             YOU LOST LOLOLOLOLOL
         </p>
     </div>
+
+    <form class="hidden hsForm">
+        <label for="fname">Initials</label><br>
+        <input type="text" id="fname" name="fname" value="AB"><br>
+        <input type="submit" value="Submit" class="submitHS">
+    </form> 
 
     <img src="./Micheal.jpg" class="hidden mike">
 
